# mipdesign

./: .gitignore  AGENTS.md  CLAUDE.md  COMPARISON_AND_ROADMAP.md  README.md  layer_arch.txt  mainframe_discovery_platform_implementation_guide  readme_setup.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.md  MIP_V1_1_RELEASE_REPORT.md  MIP_V1_2_RELEASE_REPORT.md  MIP_V1_3_RELEASE_REPORT.md  MIP_V1_RELEASE_REPORT.md  README.md  SECURITY.md  docker-compose.yml  mip-platform.code-workspace  pyproject.toml
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/.github/: copilot-instructions.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/knowledge/: README.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/mfcode/: README.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/resources/: README.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/scripts/: README.md  publish-to-github.ps1  run-demo.ps1  validate_memory_indices.py  validate_skills.py  verify_release.py
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/templates/: adr-template.md  jcl-documentation-template.md
MIP_COMPLETE_PRODUCT_v1.3.0/mip-platform-v1.3.0/tests/: test_advanced_features.py  test_api.py  test_classifier.py  test_cli.py  test_memory_scripts.py  test_parsers.py  test_pipeline.py  test_v13_intelligence.py  test_validation_and_export.py
intelligent_platform/mip-enterprise-standalone/: .gitignore  AGENTS.md  ASSESSMENT_3_POST_CODEX.md  ASSESSMENT_4_ENRICHMENT.md  CAPABILITY_ONTOLOGY_SPEC.md  CLAUDE.md  CODE_REVIEW_ASSESSMENT.md  ENRICHMENT_SPEC.md  FEATURE_INVENTORY.md  IMPLEMENTATION_ASSESSMENT.md  JAVA_IMPLEMENTATION_SPEC.md  MIP_MODERNIZATION_BRIEFING.md  MIP_PRODUCT_AND_TECHNICAL_GUIDE.md  PARSER_ARCHITECTURE_REVIEW.md  PDS_MAINFRAME_ESTATE_PARSER_GUIDE.md  PRODUCTION_READINESS_RESPONSE.md  README.md  REQUIREMENTS_PIPELINE_SPEC.md  SCAN_GAPS_SPEC.md  check_ui.bat  mip-enterprise-standalone.code-workspace  pyproject.toml  readme_ip.md  scan_codebase.bat  start_ui.bat  stop_ui.bat
intelligent_platform/mip-enterprise-standalone/.claude/: README.md  settings.json
intelligent_platform/mip-enterprise-standalone/.github/: README.md  copilot-instructions.md
intelligent_platform/mip-enterprise-standalone/03-skills/: README.md  skills.catalog.json
intelligent_platform/mip-enterprise-standalone/demo/: DEMO_RUNBOOK.md  DEMO_WALKTHROUGH_EXPLAINED_SIMPLY.md  VISION_LIVING_TWIN.md  mip_demo_deck.html  mip_living_map.html
intelligent_platform/mip-enterprise-standalone/frontend/: index.html  package.json
intelligent_platform/mip-enterprise-standalone/journey-discovery/: CUSTOMER_JOURNEY_DISCOVERY_PLAYBOOK.md  check_freshness.py  export_evidence.py
intelligent_platform/mip-enterprise-standalone/scripts/: ui-control.ps1
intelligent_platform/mip-enterprise-standalone/tests/: test_contracts_and_guardrails.py  test_decision_grade_facts.py  test_enrichment_pipeline.py  test_enterprise_deep_parser_models.py  test_external_evidence.py  test_graph_strategy.py  test_ingestion_insights.py  test_local_antlr_parser.py  test_phase1_scan_reliability.py  test_phase2_parser_coverage.py  test_phase3_domain_architecture.py  test_phase5_production_readiness.py  test_phase6_feedback_performance_quality.py  test_production_parser_hardening.py  test_reverse_engineering_graphs.py
intelligent_platform/mip-enterprise-standalone/value/: MIP_EXEC_DECK_OUTLINE.md  MIP_POSITIONING_CANVAS.md  MIP_VALUE_PROPOSITION.md  mip_deck.html  mip_deck_partner_investor.html
mip_design/reference-implementation/: README.md  pyproject.toml
reference-implementation/: .gitignore  ADVANCED_PARSER.md  README.md  pyproject.toml
reference-implementation/scripts/: benchmark_scan.py  draw_graph.py  gen_grammar.py  parser_compare.py
reference-implementation/tests/: test_advanced_copy_replacing.py  test_antlr_backend.py  test_capability_requirements.py  test_cics.py  test_csd.py  test_export.py  test_graphx.py  test_groundtruth.py  test_parallel.py  test_parser.py  test_perf.py  test_program_spec.py  test_rules.py  test_runtime.py  test_scanner_adaptive.py  test_scanner_binary.py  test_search.py  test_sequence.py  test_trace.py
(+620 files in other folders)
