[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mip-platform"
version = "1.3.0"
description = "Evidence-driven mainframe intelligence and modernization platform"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "MIP Project" }]
keywords = ["mainframe", "cobol", "jcl", "modernization", "knowledge-graph"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "pydantic>=2.10,<3",
  "networkx>=3.4,<4",
  "typer>=0.15,<1",
  "rich>=13.9,<15",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
adk = ["google-adk>=2.0,<3"]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "httpx>=0.28,<1",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2"
]

[project.scripts]
mip = "mip.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mip.persistence" = ["schema.sql"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["networkx", "google.adk"]
ignore_missing_imports = true
