[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mip"
version = "0.1.0"
description = "MIP v0.1 reference implementation — mainframe discovery spine (stdlib-only)"
requires-python = ">=3.13"
dependencies = []                 # stdlib-only: runs on any machine with Python 3.13+

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
mip = "mip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mip = ["schema.sql"]
